--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "core-js": "^3.8.3",
+    "jwt-decode": "^4.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
