--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+VUE_APP_ENV=development
+
 VUE_APP_GOOGLE_CLIENT_ID=
 
 # Controls whether Vue includes extra debugging details in production when there’s a mismatch during hydration
